# nat-sec-hackathon-24

./: README.md
backend/: .sample.env  pyproject.toml
backend/mozg/: __main__.py  app.py  server.py  util.py
frontend/: package.json
frontend/app/: globals.scss  layout.module.scss  layout.tsx  page.tsx
frontend/app/activity/: actions.ts  activity.module.scss  page.tsx
frontend/app/activity/[[...activityId]]/: activity.module.scss  event-sidebar.tsx  event.module.scss  page.tsx
frontend/app/map/: actions.ts  camera-popout.module.scss  camera-popout.tsx  page.module.scss  page.tsx
frontend/app/settings/: actions.ts  page.tsx  settings.module.scss  trigger.module.scss  trigger.tsx
frontend/components/event-summary/: event-summary.module.scss  index.tsx
frontend/components/header/: index.tsx
frontend/components/logo/: index.tsx  logo.module.scss
frontend/components/map/: index.tsx  types.ts
frontend/components/sidebar/: index.tsx  sidebar-button.module.scss  sidebar-button.tsx  sidebar.module.scss
